--- a/valohai.yaml
+++ b/valohai.yaml
@@ -6,7 +6,7 @@
     command:
     - pip install -r requirements.txt
     - mkdir -p datasets/input
-    - unzip -d datasets/input $VH_INPUTS_DIR/datazip/*.zip
+    - python mini-unzip.py -o datasets/input $VH_INPUTS_DIR/datazip/*.zip
     - python train.py --exp test --dataset input --results_path $VH_OUTPUTS_DIR {parameters} 
     inputs:
       - name: datazip
