--- a/valohai.yaml
+++ b/valohai.yaml
@@ -7,7 +7,7 @@
     - pip install -r requirements.txt
     - mkdir -p datasets/input
     - python mini-unzip.py -d datasets/input $VH_INPUTS_DIR/datazip/*.zip
-    - python train.py --exp test --dataset input --results_path $VH_OUTPUTS_DIR {parameters} 
+    - python train.py --exp test --dataset input --frame_sizes 16 4 --results_path $VH_OUTPUTS_DIR {parameters} 
     inputs:
       - name: datazip
     parameters:
@@ -17,9 +17,9 @@
       - name: n_rnn
         type: integer
         default: 2
-      - name: frame_sizes
-        type: string
-        default: "16 4"
+      #- name: frame_sizes
+      #  type: string
+      #  default: "16 4"
       - name: q_levels
         type: integer
         default: 256
